set(CAMERAS_TRANSFORM_ESTIMATION_SOURCES "CamerasTransformEstimationInterface.cpp")
set(CAMERAS_TRANSFORM_ESTIMATION_INCLUDE_DIRS "")
set(CAMERAS_TRANSFORM_ESTIMATION_DEPENDENCIES "cdff_types" "yaml-cpp" "cdff_helpers" "cdff_converters")

if(OpenCV_FOUND)
	set(CAMERAS_TRANSFORM_ESTIMATION_SOURCES ${CAMERAS_TRANSFORM_ESTIMATION_SOURCES} "EssentialMatrixDecomposition.cpp")
	set(CAMERAS_TRANSFORM_ESTIMATION_INCLUDE_DIRS ${CAMERAS_TRANSFORM_ESTIMATION_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
	set(CAMERAS_TRANSFORM_ESTIMATION_DEPENDENCIES ${CAMERAS_TRANSFORM_ESTIMATION_DEPENDENCIES} ${OpenCV_LIBRARIES})
endif()

add_library(
    cdff_dfn_cameras_transform_estimation
    ${CAMERAS_TRANSFORM_ESTIMATION_SOURCES}
)
target_include_directories(
    cdff_dfn_cameras_transform_estimation
    SYSTEM PRIVATE ${CAMERAS_TRANSFORM_ESTIMATION_INCLUDE_DIRS}
)
target_link_libraries(
    cdff_dfn_cameras_transform_estimation
    ${CAMERAS_TRANSFORM_ESTIMATION_DEPENDENCIES}
)
