add_library(
    cdff_dfn_dfnexecutors
    FeaturesDescription2D/FeaturesDescription2DExecutor.cpp
    FeaturesExtraction2D/FeaturesExtraction2DExecutor.cpp
    FeaturesExtraction3D/FeaturesExtraction3DExecutor.cpp
    FeaturesDescription3D/FeaturesDescription3DExecutor.cpp
    FeaturesMatching2D/FeaturesMatching2DExecutor.cpp
    FeaturesMatching3D/FeaturesMatching3DExecutor.cpp
    Registration3D/Registration3DExecutor.cpp
    ImageFiltering/ImageFilteringExecutor.cpp
    PointCloudTransform/PointCloudTransformExecutor.cpp
    PointCloudFiltering/PointCloudFilteringExecutor.cpp
    PointCloudAssembly/PointCloudAssemblyExecutor.cpp
    StereoReconstruction/StereoReconstructionExecutor.cpp
    PointCloudReconstruction2DTo3D/PointCloudReconstruction2DTo3DExecutor.cpp
    CamerasTransformEstimation/CamerasTransformEstimationExecutor.cpp
    FundamentalMatrixComputation/FundamentalMatrixComputationExecutor.cpp
    Transform3DEstimation/Transform3DEstimationExecutor.cpp
    BundleAdjustment/BundleAdjustmentExecutor.cpp
    PerspectiveNPointSolving/PerspectiveNPointSolvingExecutor.cpp
    PrimitiveMatching/PrimitiveMatchingExecutor.cpp
    Voxelization/VoxelizationExecutor.cpp
    DepthFiltering/DepthFilteringExecutor.cpp
    ForceMeshGenerator/ForceMeshGeneratorExecutor.cpp
)
target_link_libraries(
  cdff_dfn_dfnexecutors
  cdff_helpers
  cdff_logger
  cdff_types
)
